--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     width: 442px;
-    height: 551px;
+    height: 100vh;
     padding: 20px;
 }
 
@@ -25,7 +25,7 @@
     .heading{
         color: #FF6B82;
         font-weight: 700;
-        font-size: large;
+        font-size: x-large;
     }
 }
 
